[package]
name = "os"
version = "0.1.0"
authors = ["Carlos Mendonça <CarlosMendonca@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.9.3", features = ["map_physical_memory"]}
volatile = "0.2.6"